--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <p>
                     Njoni Somkene
                 </p>
-                <p>this is my first line of code am a frontend developer</p>
+                <p>this is my first line of code am a frontend developer its awesome</p>
             </article>
         </section>
     </main>
